iptables
root@HahuTechCafe01:/var/log# iptables-save
# Generated by iptables-save v1.8.7 on Fri Dec 26 04:00:17 2025
*mangle
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
COMMIT
# Completed on Fri Dec 26 04:00:17 2025
# Generated by iptables-save v1.8.7 on Fri Dec 26 04:00:17 2025
*raw
:PREROUTING ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
COMMIT
# Completed on Fri Dec 26 04:00:17 2025
# Generated by iptables-save v1.8.7 on Fri Dec 26 04:00:17 2025
*filter
:INPUT ACCEPT [809672:159154051]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [969642:198755707]
:DOCKER - [0:0]
:DOCKER-BRIDGE - [0:0]
:DOCKER-CT - [0:0]
:DOCKER-FORWARD - [0:0]
:DOCKER-INTERNAL - [0:0]
:DOCKER-USER - [0:0]
-A FORWARD -j DOCKER-USER
-A FORWARD -j DOCKER-FORWARD
-A DOCKER ! -i docker0 -o docker0 -j DROP
-A DOCKER-BRIDGE -o docker0 -j DOCKER
-A DOCKER-CT -o docker0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A DOCKER-FORWARD -j DOCKER-CT
-A DOCKER-FORWARD -j DOCKER-INTERNAL
-A DOCKER-FORWARD -j DOCKER-BRIDGE
-A DOCKER-FORWARD -i docker0 -j ACCEPT
-A DOCKER-USER -p tcp -m tcp --dport 5000:6000 -j ACCEPT
-A DOCKER-USER -p udp -m udp --dport 5000:6000 -j ACCEPT
-A DOCKER-USER -p tcp -m tcp --sport 5000:6000 -j ACCEPT
-A DOCKER-USER -p udp -m udp --sport 5000:6000 -j ACCEPT
COMMIT
# Completed on Fri Dec 26 04:00:17 2025
# Generated by iptables-save v1.8.7 on Fri Dec 26 04:00:17 2025
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:DOCKER - [0:0]
-A PREROUTING -m addrtype --dst-type LOCAL -j DOCKER
-A OUTPUT ! -d 127.0.0.0/8 -m addrtype --dst-type LOCAL -j DOCKER
-A POSTROUTING -s 172.17.0.0/16 -d 10.189.0.0/16 -j SNAT --to-source 10.0.144.2
-A POSTROUTING -s 172.17.0.0/16 -d 10.194.0.0/16 -j SNAT --to-source 10.0.144.2
-A POSTROUTING -s 172.17.0.0/16 -d 10.194.253.104/32 -j RETURN
-A POSTROUTING -s 172.17.0.0/16 -d 10.189.22.133/32 -j RETURN
-A POSTROUTING -s 172.17.0.0/16 -d 10.189.22.133/32 -j RETURN
-A POSTROUTING -s 172.17.0.0/16 -d 10.189.18.133/32 -j RETURN
-A POSTROUTING -s 172.17.0.0/16 ! -o docker0 -j MASQUERADE
COMMIT
# Completed on Fri Dec 26 04:00:17 2025
